--- a/WebFiles/homePage.html
+++ b/WebFiles/homePage.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <h1>The Grand Exchange</h1>
+<style>
+    h1 {text-align: center;}
+    p {text-align: center;}
+    div {text-align: center:}
+</style>
+<h2>Day Trading Made Convenient</h2>
 <nav>
 </nav>
 </header>
