--- a/WebFiles/homePage.html
+++ b/WebFiles/homePage.html
@@ -3,7 +3,7 @@
 <h1>The Grand Exchange</h1>
 <style>
     h1 {text-align: center;}
-    p {text-align: center;}
+    p {text-align: center;}git
     div {text-align: center:}
 </style>
 <h2>Day Trading Made Convenient</h2>
