--- a/WebFiles/dashboard.html
+++ b/WebFiles/dashboard.html
@@ -27,7 +27,7 @@
 
     </style>
     <!-- Custom styles for this template -->
-    <link href="dashboard.css" rel="stylesheet">
+    <link href="/Users/ryangould/Downloads/SP_DayTrading/WebFiles/dashboard.css" rel="stylesheet">
   </head>
   <body>
   <h1>The Grand Exchange</h1>
@@ -393,5 +393,5 @@
       <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="../assets/dist/js/bootstrap.bundle.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
-        <script src="dashboard.js"></script></body>
+        <script src="/Users/ryangould/Downloads/SP_DayTrading/WebFiles/dashboard.js"></script></body>
 </html>
