--- a/WebFiles/dashboard_copy.html
+++ b/WebFiles/dashboard_copy.html
@@ -57,6 +57,7 @@
                 <th> Market Close</th>
                 <th> Trading Period 1</th>
                 <th> Trading Period 2</th>
+                <th></th>
             </tr>
 
           </tbody><tbody>
@@ -70,7 +71,6 @@
       </div>
         <!-- Chart ends -->
 
-
       <canvas class="my-4 w-100" id="myChart" width="700" height="380"></canvas>
 
       <h2>Live Trades</h2>
@@ -80,12 +80,15 @@
             <tr>
               <th>#id</th>
               <th>Symbol</th>
-              <th>Order Type</th>
-              <th> Timestamp</th>
-              <th>Time in Force</th>
-              <th>shares</th>
-              <th>Average Price</th>
-              <th>Quantity</th>
+              <th>High</th>
+              <th>Low</th>
+              <th>Open</th>
+              <th>close</th>
+              <th>volume</th>
+              <th>sharecount</th>
+              <th>timestamp</th>
+              <th>barType</th>
+              <th>tradeType</th>
             </tr>
           </thead>
           <tbody>
@@ -96,6 +99,11 @@
               <td>dolor</td>
               <td>sit</td>
               <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
             </tr>
 
             <tr>
@@ -104,6 +112,12 @@
               <td>diam</td>
               <td>Sed</td>
               <td>nisi</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
             </tr>
             <tr>
               <td>1,005</td>
@@ -111,6 +125,12 @@
               <td>quis</td>
               <td>sem</td>
               <td>at</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
             </tr>
             <tr>
               <td>1,006</td>
@@ -118,6 +138,12 @@
               <td>elementum</td>
               <td>imperdiet</td>
               <td>Duis</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
             </tr>
             <tr>
               <td>1,007</td>
@@ -125,6 +151,12 @@
               <td>ipsum</td>
               <td>Praesent</td>
               <td>mauris</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
             </tr>
             <tr>
               <td>1,010</td>
@@ -132,13 +164,17 @@
               <td>Vestibulum</td>
               <td>lacinia</td>
               <td>arcu</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
+              <td>Place holder</td>
             </tr>
           </tbody>
         </table>
       </div>
     </div></main>
-
-
 
   <!-- Algorithm performance table -->
 
@@ -150,11 +186,17 @@
             <thread>
               </thread><table class="table table-striped table-sm">
             <tbody><tr>
-                <th>#</th>
-              <th>Trades</th>
-              <th>Trading Ratio</th>
-                <th>Portfolio vs. market</th>
-                <th>Market Shares</th>
+                <th>#id</th>
+              <th>Symbol</th>
+              <th>High</th>
+              <th>Low</th>
+              <th>Open</th>
+              <th>close</th>
+              <th>volume</th>
+              <th>sharecount</th>
+              <th>timestamp</th>
+              <th>barType</th>
+              <th>tradeType</th>
 
               </tr>
 
@@ -168,12 +210,6 @@
             </tr>
 
             </tbody>
-
-
-
-
-
-
     </table>
 
 
@@ -238,7 +274,6 @@
         </table>
       </div>
     </div></div></div></main>
-
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
